[project]
name = "hairydogm"
version = "0.1.1"
description = "Some utilities from AIOgram adapted to be used with Hydrogram."
authors = [{ name = "Hitalo" }]
dependencies = ["hydrogram>=0.1.4", "babel>=2.14.0"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["telegram", "bot", "asyncio", "hydrogram", "hairydogm", "aiogram"]

[project.urls]
homepage = "https://github.com/HitaloM/hairydogm"
tracker = "https://github.com/HitaloM/hairydogm/issues"
community = "https://t.me/HitaloProjects"
source = "https://github.com/HitaloM/hairydogm"
documentation = "https://hairydogm.readthedocs.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pre-commit>=3.6.0", "ruff>=0.1.11"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 99
target-version = "py312"
select = [
    "I",    # isort
    "E",    # pycodestyle
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "F",    # pyflakes
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
    "N",    # pep8-naming
    "RUF",  # ruff
    "G",    # flake8-logging-format
    "TID",  # flake8-tidy-imports
]

[tool.ruff.isort]
known-first-party = ["src/hairydogm"]

[tool.hatch.build.targets.wheel]
packages = ["src/hairydogm"]

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "GL08",
    "SA01",
    "EX01",
]
